--- a/frontend-grading-assignment/package.json
+++ b/frontend-grading-assignment/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "aos": "^2.3.4",
     "bootstrap": "^5.3.2",
+    "jquery": "^3.7.1",
+    "popper.js": "^1.16.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.0"
