--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "@headlessui/react": "^1.7.17",
     "@headlessui/tailwindcss": "^0.2.0",
     "@heroicons/react": "^2.0.18",
+    "@mui/icons-material": "^5.14.19",
     "@mui/material": "^5.14.20",
+    "bootstrap": "^5.3.2",
     "chart.js": "^4.3.3",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
