I just learnt about tailwind css and I am using it to design my pages. But as at now, I have used it to do my landing and login page, but I hope to continue with the rest of the other pages

--- a/package.json
+++ b/package.json
@@ -6,17 +6,23 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.0.18",
     "@mui/icons-material": "^5.14.19",
     "@mui/material": "^5.14.19",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "autoprefixer": "^10.4.16",
     "chart.js": "^4.4.0",
+    "postcss": "^8.4.32",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
+    "tailwindcss": "^3.3.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
