--- a/frontend-grading-assignment/package.json
+++ b/frontend-grading-assignment/package.json
@@ -12,11 +12,15 @@
   "dependencies": {
     "aos": "^2.3.4",
     "bootstrap": "^5.3.2",
+    "datatables.net": "^1.13.8",
     "jquery": "^3.7.1",
+    "match-sorter": "^6.3.1",
     "popper.js": "^1.16.1",
     "react": "^18.2.0",
+    "react-data-table-component": "^7.5.4",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.0"
+    "react-router-dom": "^6.20.0",
+    "react-table": "^7.8.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
