--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "bootstrap": "^5.3.2",
     "react-router": "^6.20.1",
     "react-router-dom": "^6.20.1",
+    "switch": "^0.0.0",
     "web-vitals": "^3.5.0"
   }
 }
