--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "dependencies": {
-    "create-react-app": "^5.0.1"
+    "autoprefixer": "^10.4.16",
+    "create-react-app": "^1.2.1",
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.3.6"
   }
 }
