--- a/missing-grade-reporting-system/package.json
+++ b/missing-grade-reporting-system/package.json
@@ -10,6 +10,7 @@
     "eslint-plugin-react": "^7.33.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.49.0",
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
@@ -25,9 +26,7 @@
       "react-app",
       "react-app/jest"
     ],
-    "plugins": [
-      
-    ],
+    "plugins": [],
     "rules": {}
   },
   "browserslist": {
