--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "autoprefixer": "^10.4.16",
     "create-react-app": "^1.2.1",
     "postcss": "^8.4.32",
+    "react-icons": "^4.12.0",
     "tailwindcss": "^3.3.6"
   }
 }
