--- a/missing grades/package.json
+++ b/missing grades/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "missing-grades",
+  "name": "reed",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -11,8 +11,7 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.1"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
