--- a/package.json
+++ b/package.json
@@ -17,7 +17,12 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.1",
     "reactstrap": "^8.10.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "bootstrap": "4.6.0",
+    "react-bootstrap": "2.4.0",
+    "react-router": "5.2.0",
+    "react-hook-form": "^6.15.8",
+    "sass": "1.53.0"
   },
   "scripts": {
     "start": "react-scripts start",
