--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
     "react-router-dom": "^6.20.1"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.1.5",
+    "@testing-library/react": "^14.1.2",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
+    "jest": "^29.7.0",
     "vite": "^4.1.0"
   }
 }
