--- a/missing-grade-reporting-system/package.json
+++ b/missing-grade-reporting-system/package.json
@@ -6,8 +6,6 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "eslint-plugin-jsx": "^0.1.0",
-    "eslint-plugin-react": "^7.33.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.0",
@@ -42,6 +40,13 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "7.22.5",
+    "@babel/eslint-parser": "7.22.5",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@babel/preset-env": "7.22.5",
+    "eslint": "^8.55.0",
+    "eslint-plugin-jsx": "^0.1.0",
+    "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-router": "^0.0.1"
   }
 }
