--- a/grading-system/package.json
+++ b/grading-system/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://aduuuna.github.io/11341365_DCIT205_Assignment1",
   "name": "grading-system",
   "version": "0.1.0",
   "private": true,
@@ -15,10 +16,9 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "homepage": "https://aduuuna.github.io/grading-system",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -b master -d build",
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
