--- a/missing/package.json
+++ b/missing/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "missing-grades-reporting-system",
+  "name": "missing",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
