--- a/package.json
+++ b/package.json
@@ -1,7 +1,13 @@
 {
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.0",
+    "@mui/material": "^5.15.0",
+    "@mui/x-date-pickers": "^6.18.5",
     "apexcharts": "^3.44.2",
     "bootstrap": "^5.3.2",
+    "material-react-table": "^2.0.5",
     "react-apexcharts": "^1.4.1",
     "react-data-table-component": "^7.5.4"
   }
