--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "apexcharts": "^3.44.2",
     "bootstrap": "^5.3.2",
     "material-react-table": "^2.0.5",
+    "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
+    "react-bootstrap": "^2.9.1",
     "react-data-table-component": "^7.5.4"
   }
 }
