--- a/grade-report-sys/package.json
+++ b/grade-report-sys/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "grade-report-sys",
+  "name": "trying-something",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,7 +8,11 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-icons": "^4.12.0",
+    "react-router-dom": "^6.20.1",
+    "react-scripts": "^5.0.1",
+    "react-scroll-motion": "^0.3.2",
+    "styled-components": "^6.1.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
