--- a/student grade/package.json
+++ b/student grade/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@tailwindcss/forms": "^0.5.7",
+    "alpinejs": "^3.13.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
     "react-router-dom": "^6.20.1"
   },
   "devDependencies": {
