--- a/my-app/package.json
+++ b/my-app/package.json
@@ -6,12 +6,14 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "aos": "^3.0.0-beta.6",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.32",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.1",
-    "react-scripts": "5.0.1",
+    "react-router-dom": "^6.21.0",
+    "react-scripts": "^5.0.1",
+    "react-scroll": "^1.9.0",
     "tailwindcss": "^3.3.5",
     "web-vitals": "^2.1.4"
   },
