--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-data-table-component": "^7.5.4",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
+    "react-router-dom": "^6.21.0",
     "react-typed": "^1.2.0"
   },
   "devDependencies": {
