--- a/my-app/package.json
+++ b/my-app/package.json
@@ -12,7 +12,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.0",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "^3.0.1",
     "react-scroll": "^1.9.0",
     "tailwindcss": "^3.3.5",
     "web-vitals": "^2.1.4"
@@ -40,5 +40,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4"
   }
 }
