--- a/grade-report-system/package.json
+++ b/grade-report-system/package.json
@@ -15,7 +15,9 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.21.0",
-    "react-scroll": "^1.9.0"
+    "react-scroll": "^1.9.0",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
