--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.21.0",
-    "react-typed": "^1.2.0"
+    "react-chartjs-2": "^5.2.0",
+    "react-typed": "^1.2.0",
+    "chart.js": "^4.4.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
