--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "chart.js": "^4.4.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-data-table-component": "^7.5.4",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
+    "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.21.0",
-    "react-chartjs-2": "^5.2.0",
-    "react-typed": "^1.2.0",
-    "chart.js": "^4.4.1"
+    "react-typed": "^1.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
