--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "missing-grade-report-system",
+  "homepage": "https://steveAzo.github.io/repository",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
